implemented toLocalPage() method, various fixes